<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eaeaea">

    <include layout="@layout/search_tab" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/mark_search_content"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_bebcbc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="@color/color_0cabeb"/>
        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:background="@color/color_d1d0d1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/user"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_0cabeb"/>
        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:background="@color/color_d1d0d1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_0cabeb"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/file"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="@color/color_0cabeb"/>
        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:background="@color/color_d1d0d1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/channel"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_0cabeb"/>
        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:background="@color/color_d1d0d1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/picture"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_0cabeb"/>
    </LinearLayout>
</LinearLayout>