<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:gravity="center"
        android:id="@+id/tv_defaultSort"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:textSize="15sp"
        android:textColor="@color/color_08"
        android:text="@string/default_sort"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_bebcbc"/>

    <TextView
        android:gravity="center"
        android:id="@+id/tv_onlineSort"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:textSize="15sp"
        android:textColor="@color/color_08"
        android:text="@string/online_sort"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_bebcbc"/>

    <TextView
        android:gravity="center"
        android:id="@+id/tv_timeSort"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:textSize="15sp"
        android:textColor="@color/color_08"
        android:text="@string/time_sort"
        />

</LinearLayout>