<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eaeaea">

    <include layout="@layout/activity_top_title" />

    <LinearLayout
        android:id="@+id/ll_account_safety"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_safety"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/color_08"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_jiantou"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_community_ours"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/community_ours"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/color_08"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_jiantou"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_d1d0d1"/>
    <LinearLayout
        android:id="@+id/ll_help_feedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/help_feedback"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/color_08"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_jiantou"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_d1d0d1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_version"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/color_08"/>

        <TextView
            android:id="@+id/tv_current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/color_08"
            android:text="1.0.0"/>
    </LinearLayout>

</LinearLayout>