<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="5dp">

    <RelativeLayout
        android:id="@+id/vedio_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/vedio_item_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/vedio_pic" />

        <TextView
            android:id="@+id/user_tb_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/vedio_item_pic"
            android:text="@string/video_talk"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <chat.rocket.android.widget.DividerView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <RelativeLayout
        android:id="@+id/audio_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/audio_item_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/phone_pic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@id/audio_item_pic"
            android:text="@string/audio_talk"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>


    <chat.rocket.android.widget.DividerView
        android:layout_width="match_parent"
        android:layout_height="6dp" />

    <TextView
        android:id="@+id/talk_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/talk_cancel"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>